internal/lang/test/testdata/errors/add_incompatible.scampi
module main

let x = true + false
